--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
-v1.00 9/21/2022
+v1.01 10/9/2022
 
-• initial release
+• moved equip manager icon and close button for character frame
+• add missing enchants
+• shorten some enchant strings
+• add a message in chat if an item finds an enchant id but not in the database
